# jaxppo

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: poetry_build.yaml
jaxppo/: basis.py  brax_exps.py  buffer.py  config.py  evaluate.py  networks.py  ppo.py  ppo_gymnax.py  ppo_lstm.py  ppo_pure_rl.py  ppo_rnn.py  train.py  train_lstm.py  train_rnn.py  types_rnn.py  utils.py  video.py  wandb_extraction.py  wandb_logging.py  wrappers.py
jaxppo/environment/: environment_interaction.py
jaxppo/networks/: networks.py  networks_RNN.py  networks_classic.py  networks_lstm.py  utils.py
jaxppo/ppo/: ppo.py  train_ppo.py
jaxppo/sac/: sac.py  sac_config.py  train_sac.py  train_sac_2.py
tests/: test_LSTM.py  test_buffer.py  test_gymnax_follows_gymnasium.py  test_network_utils.py  test_networks.py  test_on_probing_environments.py  test_on_probing_environments_lstm.py  test_ppo.py  test_ppo_gymnax.py  test_ppo_lstm.py  test_probing_environments.py  test_utils.py
tests/average_reward/: test_on_probing_environments_average_reward.py
tests/classical/: mock_brax.py  test_on_probing_environments.py  test_ppo.py
tests/common/: test_config.py  test_env_interaction.py  test_evaluate.py  test_experience_collection.py  test_gymnax_follows_gymnasium.py  test_init_agent.py  test_loss.py  test_network_utils.py  test_networks.py  test_update_agent.py  test_utils.py  test_video.py  test_wandb_extraction.py  test_wrappers.py
tests/recurrent/: test_RNN.py  test_on_probing_environments_RNN.py  test_ppo_recurrent.py
