[tool.poetry]
name = "jaxppo"
version = "0.1.0"
description = ""
authors = ["Yann Berthelot <yannberthelot1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.28.1"
numpy = "^1.25.0"
tensorflow-probability = "^0.20.1"
tqdm = "^4.65.0"
jax = "^0.4.13"
jaxlib = "^0.4.13"
flax = "^0.7.0"
chex = "0.1.81"
gymnax = "^0.0.6"
appdirs = "1.4.3"
wandb = "^0.15.5"
distrax = "^0.1.4"
pydantic = "^2.0.2"
probing-environments = {git = "https://github.com/YannBerthelot/ProbingEnvironments.git", rev = "gymnax"}


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pytest = "7.4.0"
probing-environments = {git = "https://github.com/YannBerthelot/ProbingEnvironments.git", rev = "gymnax"}
tox = "^4.6.4"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.black]
line-length = 88
preview = true
verbose = true

[tool.isort]
profile = "black"
src_paths = ["isort", "tests", "jaxppo"]

[tool.flake8]
max-line-length = 88

[tool.mypy]
disable_error_code = "attr-defined"

[tool.tox]
legacy_tox_ini = """

[tox]
isolated_build = True
envlist = py311,linting,coverage

[testenv]
skip_install = true
allowlist_externals = poetry
commands_pre =
    poetry install

[testenv:testing]
changedir = {envtmpdir}
commands = poetry run pytest {toxinidir}

[testenv:linting]
deps = pre-commit
commands = pre-commit run --all-files


[testenv:coverage]
commands = 
    poetry run coverage run --source=jaxppo --branch -m pytest {toxinidir}
    poetry run coverage report -m --fail-under 80
    poetry run coverage xml -o {toxinidir}/coverage.xml


[gh-actions]
python =
    3.11: py311, coverage, linting
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
